# DEP

./: Cargo.toml  README.md  input.B64  input.json  input2.json  inputmg.json  inputmg.msgpack  output.bson  output.msgpack
input/: input.json
src/: incase.rs  lib.rs  lib_real.rs  main.rs
tests/: cli.rs
tests/expected/: blank_json.bson  full_bson.json  full_bson.msgpack  full_json.bson  full_msgpack.json  raw_bin.b64  temp_json.msgpack  temp_json2.msgpack
tests/inputs/: blank_json.json  full_json.json
