[package]
name = "DEF"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "2.33"
serde_json = "1.0"
bson  = "2.1"
serde = "1.0"
serde_bson = "0.0.1"
rmp = "0.8.12"
rmp-serde = "1.1.2"
hex="^0.4.3"
base64 = "0.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

